tests/fail/WrongPublicError.java
package fail;

public class WrongTypeName {
}
